i dont know i forgor

--- a/airootfs/home/lunitely/.config/hypr/hyprland.conf
+++ b/airootfs/home/lunitely/.config/hypr/hyprland.conf
@@ -79,7 +79,7 @@ env = GDK_BACKEND,wayland
 env = CLUTTER_BACKEND,wayland
 env = MOZ_ENABLE_WAYLAND,1
 env = _JAVA_AWT_WM_NONREPARENTING=1
-env = ELECTRON_OZONE_PLATFORM_HINT,auto
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 env = GDK_SCALE,1
 
 env = WLR_USE_LIBINPUT,1
