Changed Repo Path

--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -16,4 +16,4 @@ Include = /etc/pacman.d/mirrorlist
 
 [lunitely]
 SigLevel = Optional TrustAll
-Server = https://repository.lunitely.hackrland.dev/$arch
+Server = https://repo.hackrland.dev/$arch
