--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -15,5 +15,4 @@ Include = /etc/pacman.d/mirrorlist
 Include = /etc/pacman.d/mirrorlist
 
 [lunitely]
-SigLevel = Optional TrustAll
-Server = https://repo.hackrland.dev/$arch
+Include = /etc/pacman.d/lunitely-mirrorlist
