--- a/airootfs/home/lunitely/.config/hypr/hyprland.conf
+++ b/airootfs/home/lunitely/.config/hypr/hyprland.conf
@@ -1,65 +1,29 @@
-exec-once = hyprpaper
-exec-once = xhost +
-
-exec-once = [ workspace special:magic silent ] alacritty
-exec-once = zenity --password
-
-env = XCURSOR_SIZE,15
-env = XCURSOR_THEME,Adwaita
-env = HYPRCURSOR_SIZE,15
-env = HYPRCURSOR_THEME,Adwaita
-
-decoration {
-    rounding = 7
-    active_opacity = 1
-    inactive_opacity = 1
-    shadow {
-        enabled = false
-    }
-    blur {
-        enabled = false
-    }
-}
-
-general {
-    gaps_in = 10
-    gaps_out = 20
-    border_size = 0
-    resize_on_border = false
-
-}
-
-misc {
-    force_default_wallpaper = 0
-    disable_hyprland_logo = true
-}
-
 input {
-    kb_layout = de
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
-    follow_mouse = 1
-    sensitivity = 0
-    touchpad {
-        natural_scroll = true
-    }
+    kb_layout = us
 }
 
-gestures {
-    workspace_swipe = false
-}
+# --
+# --   Other Configuration
+# --
+
+source = ~/.config/hypr/monitors.conf
+
+exec-once = hyprpaper
+exec-once = [ workspace special:magic silent ] alacritty
+exec-once = [ workspace special:magic silent ] nwg-displays
+exec-once = zenity --info --text="The Installer is in development. Press Super + T for a Terminal"
 
 $mainMod = SUPER
-
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
 
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+bind = $mainMod, T, togglespecialworkspace, magic
+bind = $mainMod, 1, workspace, 1
+
+bindm = $mainMod, mouse:272, movewindow
+bindm = $mainMod, mouse:273, resizewindow
 
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
@@ -68,12 +32,10 @@ bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -s set 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -s set 10%-
 
-bind = $mainMod, T, togglespecialworkspace, magic
-
-bind = $mainMod, 1, workspace, 1
-
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-
+env = XCURSOR_SIZE,15
+env = XCURSOR_THEME,Adwaita
+env = HYPRCURSOR_SIZE,15
+env = HYPRCURSOR_THEME,Adwaita
 env = SDL_VIDEODRIVER,wayland
 env = GDK_BACKEND,wayland
 env = CLUTTER_BACKEND,wayland
@@ -81,51 +43,23 @@ env = MOZ_ENABLE_WAYLAND,1
 env = _JAVA_AWT_WM_NONREPARENTING=1
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 env = GDK_SCALE,1
-
-env = WLR_USE_LIBINPUT,1
-env = WLR_RENDERER_ALLOW_SOFTWARE,1
-env = WLR_RENDERER,vulkan
-
-env = __GL_MaxFramesAllowed,1
-env = __GL_THREADED_OPTIMIZATIONS,0
-
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_SESSION_TYPE,wayland
-env = XDG_SESSION_DESKTOP,Hyprland
-
 env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
-
-monitor=,preferred,auto,auto
+env = WLR_USE_LIBINPUT,1
+env = WLR_RENDERER_ALLOW_SOFTWARE,1
+env = WLR_RENDERER,vulkan
+env = __GL_MaxFramesAllowed,1
+env = __GL_THREADED_OPTIMIZATIONS,0
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
 
 windowrulev2 = suppressevent maximize, class:.*
-
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP 
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP 
-
-dwindle {
-    pseudotile = true
-    preserve_split = true
-}
-
-misc {
-    vfr = true
-}
-
-master {
-    new_status = master
-}
-
-general {
-    allow_tearing = false
-    layout = dwindle
-}
-
-xwayland {
-  force_zero_scaling = true
-}
 
 animations {
     enabled = yes, please :)
@@ -154,4 +88,52 @@ animations {
     animation = workspaces, 1, 1.94, almostLinear, fade
     animation = workspacesIn, 1, 1.21, almostLinear, fade
     animation = workspacesOut, 1, 1.94, almostLinear, fade
+}
+decoration {
+    rounding = 7
+    active_opacity = 1
+    inactive_opacity = 1
+    shadow {
+        enabled = false
+    }
+    blur {
+        enabled = false
+    }
+}
+input {
+    kb_variant =
+    kb_model =
+    kb_options =
+    kb_rules =
+    follow_mouse = 1
+    sensitivity = 0
+    touchpad {
+        natural_scroll = true
+    }
+}
+gestures {
+    workspace_swipe = false
+}
+dwindle {
+    pseudotile = true
+    preserve_split = true
+}
+misc {
+    vfr = true
+    force_default_wallpaper = 0
+    disable_hyprland_logo = true
+}
+master {
+    new_status = master
+}
+general {
+    allow_tearing = false
+    layout = dwindle
+    gaps_in = 10
+    gaps_out = 20
+    border_size = 0
+    resize_on_border = false
+}
+xwayland {
+  force_zero_scaling = true
 }
