Fixed a bunch of stuff

--- a/airootfs/home/lunitely/.config/hypr/hyprland.conf
+++ b/airootfs/home/lunitely/.config/hypr/hyprland.conf
@@ -1,6 +1,4 @@
-input {
-    kb_layout = us
-}
+source = ~/keyboard.conf
 
 # --
 # --   Other Configuration
@@ -10,7 +8,6 @@ source = ~/.config/hypr/monitors.conf
 
 exec-once = hyprpaper
 exec-once = [ workspace special:magic silent ] alacritty
-exec-once = [ workspace special:magic silent ] nwg-displays
 exec-once = zenity --info --text="The Installer is in development. Press Super + T for a Terminal"
 
 $mainMod = SUPER
@@ -101,15 +98,11 @@ decoration {
     }
 }
 input {
-    kb_variant =
     kb_model =
     kb_options =
     kb_rules =
     follow_mouse = 1
     sensitivity = 0
-    touchpad {
-        natural_scroll = true
-    }
 }
 gestures {
     workspace_swipe = false
