--- a/grub/grub.cfg
+++ b/grub/grub.cfg
@@ -45,6 +45,6 @@ timeout_style=menu
 
 menuentry "Lunitely %ARCH%, archiso_platform" --class arch --class gnu-linux --class gnu --class os --id 'lunitely' {
     set gfxpayload=keep
-    linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% quite splash
+    linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% quite splash script=https://repo.hackrland.dev
     initrd /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
 }
