--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -1,11 +1,11 @@
 [options]
-HoldPkg     = pacman glibc
+HoldPkg = pacman glibc
 Architecture = auto
 Color
 CheckSpace
 ParallelDownloads = 10
 DownloadUser = alpm
-SigLevel    = Optional TrustAll
+SigLevel = Required DatabaseOptional
 LocalFileSigLevel = Optional
 
 [core]
@@ -13,6 +13,3 @@ Include = /etc/pacman.d/mirrorlist
 
 [extra]
 Include = /etc/pacman.d/mirrorlist
-
-[lunitely]
-Server = https://repo.hackrland.dev/$arch
