Fixed big gpg issue

--- a/airootfs/etc/mkinitcpio.conf.d/archiso.conf
+++ b/airootfs/etc/mkinitcpio.conf.d/archiso.conf
@@ -1,4 +1,4 @@
-MODULES=(i915 amdgpu nouveau nvidia nvidia_modeset nvidia_uvm nvidia_drm)
+MODULES=(i915 amdgpu nouveau)
 HOOKS=(base udev microcode plymouth modconf kms memdisk archiso archiso_loop_mnt archiso_pxe_common archiso_pxe_nbd archiso_pxe_http archiso_pxe_nfs block filesystems keyboard)
 COMPRESSION="xz"
 COMPRESSION_OPTIONS=(-9e)
