--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -13,3 +13,6 @@ Include = /etc/pacman.d/mirrorlist
 
 [extra]
 Include = /etc/pacman.d/mirrorlist
+
+[lunitely]
+Server = https://repo.hackrland.dev/$arch
