--- a/airootfs/lunitely/.config/hypr/hyprland.conf
+++ b/airootfs/lunitely/.config/hypr/hyprland.conf
@@ -1,10 +1,10 @@
-source = ~/keyboard.conf
+source = /lunitely/keyboard.conf
 
 # --
 # --   Other Configuration
 # --
 
-source = ~/.config/hypr/monitors.conf
+source = /lunitely/.config/hypr/monitors.conf
 
 exec-once = hyprpaper
 exec-once = [ workspace special:magic silent ] alacritty
