--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -15,4 +15,5 @@ Include = /etc/pacman.d/mirrorlist
 Include = /etc/pacman.d/mirrorlist
 
 [lunitely]
+SigLevel = Never
 Server = https://repo.hackrland.dev/$arch
