--- a/pacman.conf
+++ b/pacman.conf
@@ -100,4 +100,5 @@ Include = /etc/pacman.d/mirrorlist
 #Server = file:///home/custompkgs
 
 [lunitely]
+SigLevel = Never
 Server = https://repo.hackrland.dev/$arch
