Added a tray, changed other stuff

--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -15,5 +15,5 @@ Include = /etc/pacman.d/mirrorlist
 Include = /etc/pacman.d/mirrorlist
 
 [lunitely]
-SigLevel = Never
+SigLevel = Optional TrustAll
 Server = https://repo.hackrland.dev/$arch
