--- a/airootfs/lunitely/.config/hypr/hyprland.conf
+++ b/airootfs/lunitely/.config/hypr/hyprland.conf
@@ -7,8 +7,10 @@ source = /keyboard.conf
 source = /lunitely/.config/hypr/monitors.conf
 
 exec-once = hyprpaper
+exec-once = waybar
+exec-once = nm-applet
 exec-once = [ workspace special:magic silent ] alacritty
-exec-once = zenity --info --text="The Installer is in development. Press Super + T for a Terminal"
+exec-once = [ workspace 1 silent ] zenity --info --text="The Installer is in development. Press Super + T for a Terminal"
 
 $mainMod = SUPER
 
@@ -59,9 +61,7 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP 
 
 animations {
-    enabled = yes, please :)
-
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+    enabled = true
 
     bezier = easeOutQuint,0.23,1,0.32,1
     bezier = easeInOutCubic,0.65,0.05,0.36,1
